Replace Cash on Cash ROI with Total Capital Gain in summary cards

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                         <div class="summary-card">
                             <div class="card-icon"><i class="fas fa-chart-line"></i></div>
                             <div class="card-content">
-                                <h3>Cash-on-Cash ROI</h3>
+                                <h3>Total Capital Gain</h3>
                                 <div class="card-value" id="cashOnCashROI">-</div>
-                                <div class="card-label">Annual Return</div>
+                                <div class="card-label">Sale Proceeds - Initial Investment</div>
                             </div>
                         </div>
                         <div class="summary-card">
