Fix Total Capital Gain display and update sensitivity analysis

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                             <tr>
                                                 <th>Rent Change</th>
                                                 <th>Cash Flow</th>
-                                                <th>ROI</th>
+                                                <th>Total Capital Gain</th>
                                                 <th>IRR</th>
                                             </tr>
                                         </thead>
