Fix IRR analysis: add holding period, improve chart with proper axis labels and formatting

--- a/index.html
+++ b/index.html
@@ -334,6 +334,10 @@
                                     <span class="value" id="initialInvestment">-</span>
                                 </div>
                                 <div class="irr-item">
+                                    <span class="label">Holding Period:</span>
+                                    <span class="value" id="holdingPeriod">-</span>
+                                </div>
+                                <div class="irr-item">
                                     <span class="label">Total Cash Flow:</span>
                                     <span class="value" id="totalCashFlow">-</span>
                                 </div>
@@ -394,6 +398,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js?v=1.1"></script>
+    <script src="script.js?v=1.2"></script>
 </body>
 </html> 
