fixed label for principal

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         <th>Net Operating Income</th>
                                         <th>Mortgage Payment</th>
                                         <th>Depreciation</th>
-                                        <th>Equity Component</th>
+                                        <th>Principal</th>
                                         <th>Tax Savings</th>
                                         <th>Unclaimed Depreciation</th>
                                         <th>Cash Flow</th>
