made export related changes

--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
                      <div class="result-group">
                          <div class="table-header">
                              <h3>Yearly Returns Analysis <span id="analysisPeriodDisplay" style="font-size: 0.8em; color: #718096; font-weight: normal;">(15 years)</span></h3>
+                             <div class="download-buttons">
+                                 <button id="downloadRoiExcelBtn" class="download-btn" title="Download ROI Data as Excel">
+                                     <i class="fas fa-file-excel"></i> Export ROI Excel
+                                 </button>
+                                 <button id="downloadRoiPdfBtn" class="download-btn" title="Download ROI Data as PDF">
+                                     <i class="fas fa-file-pdf"></i> Export ROI PDF
+                                 </button>
+                             </div>
                          </div>
                          <div class="table-container">
                             <table class="returns-table" id="returnsTable">
