--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
                         </div>
                         <div class="form-row">
                             <div class="form-field">
-                                <label for="propertyAddress">Property Address</label>
+                                <label for="propertyAddress">Property Address *</label>
                                 <input type="text" id="propertyAddress" placeholder="123 Main St, City, State ZIP" required>
                                 <div class="error-message" id="propertyAddress-error"></div>
                             </div>
                             <div class="form-field">
-                                <label for="purchaseMonth">Purchase Month</label>
+                                <label for="purchaseMonth">Purchase Month *</label>
                                 <select id="purchaseMonth" required>
+                                    <option value="">Select Month</option>
                                     <option value="1">January</option>
                                     <option value="2">February</option>
                                     <option value="3">March</option>
@@ -91,8 +92,8 @@
                                 <div class="error-message" id="purchaseMonth-error"></div>
                             </div>
                             <div class="form-field">
-                                <label for="purchaseYear">Purchase Year</label>
-                                <input type="number" id="purchaseYear" value="2024" min="1990" max="2030" required>
+                                <label for="purchaseYear">Purchase Year *</label>
+                                <input type="number" id="purchaseYear" placeholder="2024" min="1990" max="2030" required>
                                 <div class="error-message" id="purchaseYear-error"></div>
                             </div>
                         </div>
