--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
                         <div class="form-row">
                             <div class="form-field">
                                 <label for="propertyAddress">Property Address *</label>
-                                <input type="text" id="propertyAddress" placeholder="123 Main St, City, State ZIP" required>
+                                <input type="text" id="propertyAddress" placeholder="Start typing address..." required autocomplete="off">
                                 <div class="error-message" id="propertyAddress-error"></div>
+                                <div id="addressSuggestions" class="address-suggestions" style="display: none;"></div>
                             </div>
                             <div class="form-field">
                                 <label for="purchaseMonth">Purchase Month *</label>
